Minor changes. Fix z-index problem.

--- a/src/sass/components/_product.scss
+++ b/src/sass/components/_product.scss
@@ -1,4 +1,5 @@
 .product {
+  overflow-x: hidden;
   .product-info {
     padding: 0 32px;
     .product-info-wrapper {
@@ -23,9 +24,11 @@
           line-height: 1;
         }
         p {
+          padding-right: 1.5rem;
           font-weight: 300;
           font-size: 0.875rem;
           line-height: 1.2;
+          text-align: justify;
         }
         .buttons-container {
           margin-top: 2rem;
@@ -42,8 +45,14 @@
             font-size: 0.875rem;
             line-height: 1;
             border-radius: 100vw;
+            &:hover {
+              cursor: pointer;
+            }
           }
           svg {
+            &:hover {
+              cursor: pointer;
+            }
             margin-right: 1.5rem;
           }
         }
@@ -60,7 +69,6 @@
       top: 0;
       left: 0;
       bottom: 0;
-      z-index: 1;
       opacity: 0;
       overflow-y: hidden;
     }
@@ -70,7 +78,7 @@
       display: flex;
       justify-content: space-between;
       position: fixed;
-      z-index: 22;
+      z-index: 2;
       top: 0;
       padding: 24px 32px;
       opacity: 0;
@@ -95,16 +103,17 @@
       position: relative;
       height: 540px;
       .product-image {
-        z-index: 8;
+        z-index: 2;
         position: absolute;
         left: 100px;
         img {
+          pointer-events: none;
           scale: 0.9;
         }
       }
     }
     .product-drag-info {
-      z-index: 99;
+      z-index: 2;
       position: relative;
       margin-bottom: 40px;
       .product-drag-info-wrapper {
